# morpheus

./: ACM_PUBLICATION_FIGURES_SUMMARY.md  BENCHMARK_ANALYSIS_TOOLKIT_SUMMARY.md  CMakeLists.txt  COMPLETE_ANALYSIS_INDEX.md  CRITICAL_COMPONENTS_CHECKLIST.md  FILES_CREATED.txt  HONEST_TRUTH_ABOUT_DATA.md  IMPLEMENTATION_SUMMARY.txt  INSTALL.md  MORPHEUS_LEGITIMACY_VALIDATION_REPORT.md  MORPHEUS_PUBLICATION_FIGURES_COMPLETE.md  PRODUCTION_INTEGRATION_GUIDE.md  QUESTIONS_AND_ANSWERS_COMPLETE.md  README.md  README_PUBLICATION_FIGURES.md  test_classifier  test_classifier.cpp
benchmarks/: CMakeLists.txt  benchmark_config.json  benchmark_runner.cpp
data/: sample.csr  sample.mtx  sample_graph.csr
python/: ACM_FIGURES_GUIDE.py  ANALYSIS_README.md  DASHBOARD_COMPLETE.md  DASHBOARD_GUIDE.md  FILE_MANIFEST.md  INTEGRATION_GUIDE.md  LATEX_TEMPLATES.py  QUICKSTART.py  README_DASHBOARD.py  acm_publication_figures.py  benchmark_analysis_main.py  benchmark_parser.py  dashboard.html  dashboard_examples.py  dashboard_generator.py  dashboard_server.py  generate_acm_paper_figures.py  generate_realistic_benchmarks.py  generate_training_data.py  morpheus_vs_baseline_comparison.py  phase_trainer.py  plot_results.py  results_visualizer.py  speedup_analysis.py  test_analysis_pipeline.py  trained_classifier.cpp  trained_classifier.cpp.importance.json  training_data.csv
python/figures/: MORPHEUS_VS_BASELINE_REPORT.txt
results/: acm_ready_results.json  morpheus_benchmarks.json
scripts/: analyze_results.py  collect_perf.sh  create_sample_csr.cpp  download_datasets.sh  download_real_graphs.sh  run_complete_benchmarks.sh
src/engine/: CMakeLists.txt  adaptive_runtime.h  morpheus_validator.h
src/engine/algorithms/: betweenness.cpp  betweenness.h  bfs.cpp  bfs.h  integrated_bfs.h  pagerank.cpp  pagerank.h
src/engine/graph/: csr_graph.cpp  csr_graph.h  graph_generator.cpp  graph_generator.h
src/engine/monitoring/: performance_monitor.cpp  performance_monitor.h  phase_classifier.h  trained_classifier.h
src/engine/prefetch/: ima_prefetcher.h  prefetcher.h  sequential_prefetcher.h  strided_prefetcher.h
src/instrumentation/: CMakeLists.txt  strategy_controller.h
src/utils/: config_parser.cpp  config_parser.h  result_writer.cpp  result_writer.h  timer.h
tests/: CMakeLists.txt  test_bfs.cpp  test_classifier_validation.cpp  test_graph.cpp  test_integration.cpp  test_pagerank.cpp
